--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require": {
         "aphiria/net": "0.*@dev",
-        "php": "^8.0"
+        "php": ">=8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.4"
