Updated to use dev versions of local Aphiria libraries (#166)

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         }
     },
     "require": {
-        "aphiria/net": "1.*@dev",
+        "aphiria/net": "1.x-dev",
         "php": ">=8.0"
     },
     "require-dev": {
