--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     },
     "require": {
         "aphiria/net": "1.x-dev",
-        "php": ">=8.0"
+        "php": ">=8.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.2",
@@ -49,7 +49,8 @@
         "phpcs-fix": "php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --diff",
         "phpunit": "php vendor/phpunit/phpunit/phpunit --coverage-clover ./.coverage/clover.xml --verbose",
         "test": [
-            "@phpunit"
+            "@phpunit",
+            "@phpcs-test"
         ]
     },
     "extra": {
